Cleanup. Prepare for view switching.

--- a/app/components/text-search-panel.hbs
+++ b/app/components/text-search-panel.hbs
@@ -1,4 +1,6 @@
 
-<h2>Text Search Panel</h2>
+<div class="text-search-panel container-fluid pt-2 pb-2">
+    <h2>Text Search Panel</h2>
 
-<TextAutocomplete />
+    <TextAutocomplete />
+</div>
