Add SOM/Top ranked view switch.

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -14,7 +14,7 @@
       <div id="mainWindow" class="col-9">
           <div class="main-grid-row row">
           <!-- Main grid -->
-          <MainGrid @frames={{@model.mainDisplay.frames}} />
+          <MainGrid />
         </div>
       </div>
     </div>
