--- a/app/components/main-buttons-panel.hbs
+++ b/app/components/main-buttons-panel.hbs
@@ -1,6 +1,18 @@
 <div class="text-search-panel container-fluid pt-2 pb-2">
 
-    <button class="btn-primary btn" type="button" {{on "click" this.onClickTopScoredBtn}}>Top Scored View</button>
-    <button class="btn-primary btn" type="button" {{on "click" this.onClickSomBtn}}>SOM View</button>
+    <div class="row">
+        <div class="rescore-btns-const col-12">
+            <button class="btn-rescore btn-primary btn" type="button" {{on "click" this.onClickRescoreTopScoredBtn}}>Rescore<br/>Top Scored
+                View</button>
+            <button class="btn-rescore btn-primary btn" type="button" {{on "click" this.onClickRescoreSomScoredBtn}}>Rescore<br/>SOM View</button>
+        </div>
+    </div>
 
+    <div class="row">
+        <div class="change-view-btns col-12">
+            <button class="btn-secondary btn" type="button" {{on "click" this.onClickTopScoredBtn}}>Top Scored
+                View</button>
+            <button class="btn-secondary btn" type="button" {{on "click" this.onClickSomBtn}}>SOM View</button>
+        </div>
+    </div>
 </div>
