--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -44,19 +44,32 @@ body {
     background-position: center;
     background-repeat: no-repeat;
 
+    &.highlighted {
+        .frame-overlay {
+            border-color: map-get($theme-colors, "danger");
+        }
+        
+    }
 
     .frame-overlay {
         border: 4px solid transparent;
-        opacity: 0;
+        
         position: absolute;
         left:0;
         top: 0;
         width: 100%;
         height: 100%;
 
+        &>* {
+            opacity: 0;
+        }
+
+
         &:hover {
-            opacity: 0.8;
             border-color: olive;
+            > * {
+                opacity: 0.8;
+            }
         }
 
         .btn-submit {
@@ -102,23 +115,25 @@ body {
 
 .replay-window {
     position: absolute;
+    width: 100vw;
     left:0;
     top: 0;
     background:  map-get($theme-colors, "primary");
-    overflow-x: scroll;
+    overflow-x: auto;
     overflow-y: hidden;
     display: block;
     max-width: 100%;
 
     .slider-row {
-
+        font-size: 0;
         height: 100%;
         width: max-content;
         .frame {
-            width: 160px;
-            height: 90px;
+            width: 200px;
+            height: 112px;
             display: inline-block;
             max-width: none;
+           
         }
     }
 }
