--- a/app/components/frame.hbs
+++ b/app/components/frame.hbs
@@ -1,5 +1,4 @@
-
-<div class="frame col-2"  style={{thumb "http://127.0.0.1:8888/frames/" @frame.src}} {{on "wheel" this.onWheel}}>
+<div class="frame col-2 {{if @frame.highlighted "highlighted"}}"  style={{thumb "http://127.0.0.1:8888/frames/" @frame.src}} {{on "wheel" this.onWheel}}>
     <div class="frame-overlay"data-id={{@frame.id}} >
         <button type="button" class="btn-submit btn btn-success"
             data-id={{@frame.id}} {{on "click" this.onSubmitBtnClick}}><i class="fa fa-check" aria-hidden="true"></i></button>            
@@ -9,7 +8,5 @@
 
         <button type="button" data-id={{frame.id}} class="btn-knn btn btn-primary"
             {{on "click" this.onKnnBtnClick}}>Neighbours</button>            
-
-    </div>
-    
+    </div>    
 </div>
