Finish first implementation of replay. Positioning by the row is missing.

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -33,7 +33,7 @@
 
     <div class="container">
       <div class="alert alert-danger text-center" role="alert">
-        <h3>Error loading core settings fro m `{{@model.coreSettings.url}}`!</h3>
+        <h3>Error loading core settings from '{{@model.coreSettings.url}}'!</h3>
         <hr>
         <button type="button" class="btn btn-primary" onclick="location.reload()">Reload</button>
       </div>
