--- a/app/components/frame.hbs
+++ b/app/components/frame.hbs
@@ -1,4 +1,6 @@
-<div class="frame col-2 {{if @frame.highlighted "highlighted"}}"  style={{thumb "http://127.0.0.1:8888/frames/" @frame.src}} {{on "wheel" this.onWheel}}>
+<div class="frame col-2 {{if @frame.highlighted "highlighted"}}"  
+    style={{thumb "http://127.0.0.1:8888/frames/" @frame.src}} {{on "wheel" this.onWheel}}
+>
     <div class="frame-overlay"data-id={{@frame.id}} >
         <button type="button" class="btn-submit btn btn-success"
             data-id={{@frame.id}} {{on "click" this.onSubmitBtnClick}}><i class="fa fa-check" aria-hidden="true"></i></button>            
