Replay window finished. KNN fixed.

--- a/app/components/frame.hbs
+++ b/app/components/frame.hbs
@@ -8,7 +8,7 @@
         <button type="button" data-id={{@frame.id}} class="btn-detail btn btn-primary"
             {{on "click" this.onDetailBtnClick}}>Detail</button>            
 
-        <button type="button" data-id={{frame.id}} class="btn-knn btn btn-primary"
+        <button type="button" data-id={{@frame.id}} class="btn-knn btn btn-primary"
             {{on "click" this.onKnnBtnClick}}>Neighbours</button>            
     </div>    
 </div>
