--- a/app/components/replay-window.hbs
+++ b/app/components/replay-window.hbs
@@ -1,7 +1,7 @@
 
 
 
-<div id={{this.CS.ELEM_ID_REPLAY_WINDOW}} class="replay-window">
+<div id={{this.CS.ELEM_ID_REPLAY_WINDOW}} class="{{if this.windowVisible "visible"}} replay-window">
     <div id={{this.CS.ELEM_ID_REPLAY_WINDOW_SLIDER}} class="slider-row">
 
         {{#if this.windowVisible}}
