--- a/app/components/text-search-panel.hbs
+++ b/app/components/text-search-panel.hbs
@@ -1,8 +1,8 @@
 
 <div class="text-search-panel container-fluid pt-2 pb-2">
-    <h2>Text Search Panel</h2>
+    <h2 class="panel-title">Text queries</h2>
+    
+    <TextAutocomplete @model={{@model}} @id={{0}} />
 
-    <TextAutocomplete @id={{0}} />
-
-    <TextAutocomplete @id={{1}} />
+    <TextAutocomplete @model={{@model}} @id={{1}} />
 </div>
