Add & refactor logging mechanisms. Add prototype component. Simplify event adding.

--- a/app/components/replay-window.hbs
+++ b/app/components/replay-window.hbs
@@ -1,8 +1,8 @@
 
 
 
-<div id={{this.CS.ELEM_ID_REPLAY_WINDOW}} class="{{if this.windowVisible "visible"}} replay-window">
-    <div id={{this.CS.ELEM_ID_REPLAY_WINDOW_SLIDER}} class="slider-row">
+<div id={{this.ELEM_IDS.REPLAY_WINDOW}} class="{{if this.windowVisible "visible"}} replay-window">
+    <div id={{this.ELEM_IDS.REPLAY_WINDOW_SLIDER}} class="slider-row">
 
         {{#if this.windowVisible}}
 
