--- a/app/components/detail-window.hbs
+++ b/app/components/detail-window.hbs
@@ -1,10 +1,9 @@
 
 <div class="custom-modal-window detail-window-modal {{if this.windowVisible "visible"}}">
-    <div id={{this.CS.ELEM_ID_DETAIL_WINDOW}} 
+    <div id={{this.ELEM_IDS.DETAIL_WINDOW}} 
         class="detail-window"
-        style="width:{{this.modalSliderW}}px; height:{{this.modalSliderH}}px"    
     >
-        <div id={{this.CS.ELEM_ID_DETAIL_WINDOW_SLIDER}} 
+        <div id={{this.ELEM_IDS.DETAIL_WINDOW_SLIDER}} 
             class="slider-row"
         >
 
@@ -27,16 +26,23 @@
     <!-- We need to enforce the frame sizes so our calculations match! -->
     {{#if (and this.cssFrameWidth this.cssFrameHeight)}}
         <style>
-            #{{this.CS.ELEM_ID_DETAIL_WINDOW}} .frame {
+            #{{this.ELEM_IDS.DETAIL_WINDOW}} .frame {
                 width: {{this.cssFrameWidth}} !important;
                 height: {{this.cssFrameHeight}} !important;
                 
             }
             /* So button sizes scale propperly. */
-            #{{this.CS.ELEM_ID_DETAIL_WINDOW}} .frame * { 
+            #{{this.ELEM_IDS.DETAIL_WINDOW}} .frame * { 
                 font-size: 10px; 
             }
         </style>
     {{/if}}
 
 </div>
+
+<style>
+    .detail-window {
+        width:{{this.modalSliderW}}px; 
+        height:{{this.modalSliderH}}px;
+    }
+</style>
