Add reset search. Add debug, help, settings windows.

--- a/app/components/main-panel.hbs
+++ b/app/components/main-panel.hbs
@@ -1,7 +1,11 @@
 
+{{!-- <h1>Current model ID: {{@model.id}}</h1> --}}
+
+<TopButtonsPanel />
+
 <TextSearchPanel @model={{@model}} />
 
 <MainButtonsPanel />
 
 
-<DebugButtonsPanel />
+<BottomButtonsPanel @model={{@model}} />
