--- a/app/components/main-buttons-panel.hbs
+++ b/app/components/main-buttons-panel.hbs
@@ -1,4 +1,4 @@
-<div class="text-search-panel container-fluid pt-2 pb-2">
+<div class="main buttons-panel container-fluid col-12">
 
     <div class="row">
         <div class="rescore-btns-const col-12">
