--- a/app/components/text-search-panel.hbs
+++ b/app/components/text-search-panel.hbs
@@ -1,5 +1,8 @@
 
-<div class="text-search-panel container-fluid pt-2 pb-2">
+
+{{!-- <h1>Current model ID: {{@model.id}}</h1> --}}
+
+<div class="text-search-panel container-fluid col-12">
     <h2 class="panel-title">Text queries</h2>
     
     <TextAutocomplete @model={{@model}} @id={{0}} />
