--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -21,6 +21,7 @@ body {
 }
 * {
     box-sizing: border-box;
+    color: #fff;
 }
 
 .panel-title {
@@ -28,6 +29,16 @@ body {
     text-align: center;
 }
 
+.alert {
+    * {
+        color: #000;
+    }
+}
+
+.main-panel {
+    
+
+}
 .main-grid {
     position: relative;
     height: 100vh;
@@ -115,6 +126,12 @@ body {
     }
 }
 
+
+
+.modal-dialog {
+    max-width: 75vw;
+}
+
 .modal.fade .modal-dialog {
     transition: none;
     transform: translate(0, -50px);
@@ -122,6 +139,13 @@ body {
 
 .modal-lg, .modal-xl {
     max-width: 75%;
+}
+
+.compact-code {
+    max-height: 300px;
+    overflow: auto;
+    background-color: map-get($map: $theme-colors, $key: "primary");
+    color: #fff;
 }
 
 .replay-window {
@@ -239,6 +263,7 @@ body {
     padding: 2rem;
     & > *{
         pointer-events: initial;
+        z-index: 100;
     }
 }
 .global-notifications-cont {
@@ -266,5 +291,22 @@ body {
         left: 50%;
         top: 50%;
         transform: translate(-50%, -50%);
+    }
+}
+
+.custom-modal {
+    display: none;
+    background: rgba(map-get($map: $theme-colors, $key: "primary"), 0.7);
+}
+
+.display-block {
+    display: block !important;
+}
+
+.buttons-panel {
+    &.bottom {
+        position: absolute;
+        bottom: 0;
+        left: 0;
     }
 }
