--- a/app/components/prototype-01.hbs
+++ b/app/components/prototype-01.hbs
@@ -1,3 +1,7 @@
 
 
+<div
+    {{did-update this.didUpdateAttrs @model}} 
+></div>
+
 <button class="btn-secondary btn" type="button" {{on "click" (fn this.toast "error") }}>Push not err</button>
