--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -167,6 +167,11 @@ body {
     max-width: 75vw;
 }
 
+.modal-content {
+    border: none;
+    background-color: rgba(map-get($theme-colors, "secondary"), 0.8);
+}
+
 .modal.fade .modal-dialog {
     transition: none;
     transform: translate(0, -50px);
@@ -345,3 +350,95 @@ body {
         left: 0;
     }
 }
+
+
+.history-list {
+    list-style: none;
+    display: block;
+    margin: 0;
+    padding: 0;
+    max-height: 10rem;
+    overflow: auto;
+  
+    .history-item {
+      width: calc(20% - 0.2rem);
+      display: inline-block;
+      vertical-align: top;
+      padding: 0rem 0rem;
+      position: relative;
+      background: theme-color-level($color-name: "black", $level: 0);
+      margin-right: 0.2rem;
+      margin-bottom: 0.4rem;
+      border: 3px solid transparent;
+      transition: 0.1s ease-in-out;
+      cursor: pointer;
+  
+      &.active {
+        border: 3px solid theme-color-level($color-name: "danger", $level: 0);
+        img {
+          opacity: 1 !important;
+        }
+      }
+      img {
+        display: block;
+        width: 100%;
+        max-height: 60px;
+        opacity: 0.3;
+        transition: 0.2s ease-in-out;
+        &:hover {
+          opacity: 1;
+        }
+      }
+      .title {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-size: 2rem;
+        color: theme-color-level($color-name: "green", $level: 0);
+        pointer-events: none;
+        display: none;
+      }
+      .time {
+        display: block;
+        color: theme-color-level($color-name: "white", $level: 0);
+        font-size: 0.8rem;
+        width: 100%;
+        text-align: center;
+      }
+    }
+  }
+
+  .panel-title {
+    display: none;
+    font-size: 1.4rem;
+    text-transform: uppercase;
+    text-align: center;
+    padding: 0.4em 0.8em;
+
+    &.visible {
+      display: block;
+    }
+
+    &:before,
+    &:after {
+      border: 1px solid rgba(map-get($theme-colors, "white"), 0.7);
+      content: "";
+      position: relative;
+      display: block;
+      width: 80%;
+      margin: 0 auto;
+    }
+
+    &:before {
+      width: 80%;
+      border: 2px solid rgba(map-get($theme-colors, "fifth"), 0.7);
+      top: -0.4rem;
+    }
+
+    &:after {
+      width: 45%;
+      border: 1px solid rgba(map-get($theme-colors, "white"), 0.7);
+      bottom: -0.4rem;
+    }
+  }
