--- a/app/components/frame.hbs
+++ b/app/components/frame.hbs
@@ -5,6 +5,9 @@
     {{on "click" this.onLikeFrame}}
 >
     <div class="frame-overlay"data-id={{@frame.id}} >
+        <button type="button" class="btn-bookmark btn btn-warning"
+            data-id={{@frame.id}} {{on "click" this.onBookmarkBtnClick}}><i class="fa fa-star" aria-hidden="true"></i></button>            
+
         <button type="button" class="btn-submit btn btn-success"
             data-id={{@frame.id}} {{on "click" this.onSubmitBtnClick}}><i class="fa fa-check" aria-hidden="true"></i></button>            
 
