Add likes & bookmarks panels. Immediate model reaload still needed.

--- a/app/components/main-panel.hbs
+++ b/app/components/main-panel.hbs
@@ -5,7 +5,11 @@
 
 <TextSearchPanel @model={{@model}} />
 
+<LikesPanel @frames={{@model.userContext.search.likedFrames}} />
+
 <MainButtonsPanel />
+
+<BookmarksPanel @frames={{@model.userContext.bookmarkedFrames}} />
 
 <HistoryPanel @model={{@model}} />
 
