Finish bookmark & likes panel.

--- a/app/components/bookmarks-panel.hbs
+++ b/app/components/bookmarks-panel.hbs
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-12">
 
-            <h1 class="panel-title"> Bookmarks</h1>
+            <h1 class="panel-title small"> Bookmarks</h1>
             <ul class="bookmarks-list"
                 {{did-update this.didUpdateAttrs @frames}}
             >
