--- a/app/components/likes-panel.hbs
+++ b/app/components/likes-panel.hbs
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-12">
 
-            <h1 class="panel-title"> Likes</h1>
+            <h2 class="panel-title small"> Likes</h2>
             <ul class="likes-list"
                 {{did-update this.didUpdateAttrs @frames}}
             >
