--- a/app/components/canvas-query-panel.hbs
+++ b/app/components/canvas-query-panel.hbs
@@ -2,8 +2,12 @@
 <section class="query-canvas-panel">
     <div className="collage-search small-12 cell {{if this.visible "none" }} ">
         <div id="collageTemporalQueries">
+            
             <QueryCanvas @index=0 />
-            <div class="query-canvas-connector-cont"><p class="query-canvas-connector">...and then...</p></div>
+            <div class="query-canvas-connector-cont">
+                <a class="btn btn-success add-collage-text-query">+</a>
+                <p class="query-canvas-connector">...and then...</p>
+            </div>
             <QueryCanvas @index=1 />
         </div>
     </div>
@@ -39,6 +43,21 @@
             );
         }
 
+        function createTextQueryElement(uid) {
+            
+            return $(
+                `<div id="${uid}" class="collage-text collage-image ui-widget-content">
+                    <span class="delete" onclick="deleteElementByUid($(this).closest('div').attr('id'))">&times;</span>
+                    <div class="text autocomplete md-form">
+                        <input 
+                            class="canvas-text-input form-control mdb-autocomplete" 
+                            type="search" 
+                        />
+                    </div>
+                </div>`
+            );
+        }
+
         $(document).ready(function() {
             collage_temporal_queries = $("#collageTemporalQueries");
             collage_canvases = $(".collage-canvas")
@@ -69,6 +88,20 @@
                     reader.readAsDataURL(blob);
                 }
             });
+
+            $(".add-collage-text-query").on('click', function (event) {
+                const active_canvas = $(".paste-active");
+
+                if (!active_canvas) return;
+
+                const collage_image = createTextQueryElement("image_" + available_id);
+                draggableAndResizable(collage_image, active_canvas);
+                active_canvas.append(collage_image);
+                available_id++;
+
+            });
+
+            
         });
     
     </script>
