--- a/app/components/query-canvas.hbs
+++ b/app/components/query-canvas.hbs
@@ -1,7 +1,7 @@
 
 <div class="canvas-wrapper">
     <div 
-        id="collageQuery{{@index}}" 
+        id={{this.canvasElemId}} 
         class="collage-canvas" 
         {{on "click" (fn this.onClickQueryCanvas @index)}}></div>
 </div>
