--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -580,26 +580,29 @@ body {
     }
 }
 
-.collage-image {
+.canvas-query {
     border-width: 0;
     position: absolute !important;
     width: 20%;
     border-right-width: 2px;
     border-bottom-width: 2px;
     border-color: rgba(map-get($map: $theme-colors, $key: "danger"), 1);
-}
-.collage-text {
-    padding: 10px 10px;
-    border: 2px dashed rgba(map-get($map: $theme-colors, $key: "danger"), 1);
-    background: transparent;
-    min-width: 30px;
-    min-height: 30px;
-}
+    
+    img {
+        width: 100%;
+        height: 100%;
+        display: block;
+    }
 
-.collage-image img {
-    width: 100%;
-    height: 100%;
-    display: block;
+    &.text {
+        padding: 10px 10px;
+        border: 2px dashed rgba(map-get($map: $theme-colors, $key: "danger"), 1);
+        background: transparent;
+        min-width: 30px;
+        min-height: 30px;
+    }
+    &.bitmap {
+    }
 }
 
 .img-container {
