--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -28,6 +28,8 @@
     <DetailWindow />
     <ReplayWindow />
 
+    <CollectorWindow @model={{@model}} />
+
     <DebugWindow @model={{@model}} />
 
     <HelpWindow @model={{@model}} />
